[gd_scene load_steps=4 format=3 uid="uid://pqtlsvoecbdo"]

[ext_resource type="Script" uid="uid://dyfgfeetltdnx" path="res://barbut/dice_grabber.gd" id="1_0rcje"]
[ext_resource type="PackedScene" uid="uid://ovafjvpu8wr3" path="res://barbut/dice_scene.tscn" id="2_48mh8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_so8rm"]
size = Vector2(136, 53)

[node name="DiceGrabber" type="Area2D"]
script = ExtResource("1_0rcje")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_so8rm")

[node name="Dice1" parent="." instance=ExtResource("2_48mh8")]
position = Vector2(-32, 0)

[node name="Dice2" parent="." instance=ExtResource("2_48mh8")]
position = Vector2(40, 0)

[node name="InfoLabel" type="Label" parent="."]
offset_left = -56.0
offset_top = -72.0
offset_right = 56.0
offset_bottom = -33.0
text = "Grab and throw
the dice"
horizontal_alignment = 1

[connection signal="input_event" from="." to="." method="_onGrab"]
